Added media and changed example in README

--- a/example/index.html
+++ b/example/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
 
-    <meta charset="UTF-8" />
     <title>Photomask Example</title>
+    <meta charset="UTF-8" />
     <link rel="stylesheet" href="css/default.css" />
 
 </head>
 <body>
 
-    <h1>Photomask</h1>
+    <img is="x-photomask" src="images/space-landscape.jpg" alt="Space" />
 
 </body>
 </html>
