Added first working example

--- a/example/index.html
+++ b/example/index.html
@@ -5,11 +5,13 @@
     <title>Photomask Example</title>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="css/default.css" />
+    <script type="text/javascript" src="js/fittext.js"></script>
+    <script type="text/javascript" src="js/photomask.js"></script>
 
 </head>
 <body>
 
-    <img is="x-photomask" src="images/space-landscape.jpg" alt="Space" />
+    <img is="x-photomask" src="images/meadows.jpg" alt="Photomask." />
 
 </body>
 </html>
