Added recursive function to compute fontSize

--- a/example/index.html
+++ b/example/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <img is="x-photomask" src="images/meadows.jpg" alt="Photomask." />
+    <img is="x-photomask" src="images/meadows.jpg" alt="Photomask" />
 
 </body>
 </html>
