Added custom font 'WhoopAss' for example

--- a/example/index.html
+++ b/example/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="css/default.css" />
     <script type="text/javascript" src="js/photomask.js"></script>
+    <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
 
 </head>
 <body>
