Added 'fork me' ribbon

--- a/example/index.html
+++ b/example/index.html
@@ -13,5 +13,9 @@
 
     <img is="x-photomask" src="images/meadows.jpg" alt="Photomask" />
 
+    <a href="https://github.com/Wildhoney/Legofy" target="_blank">
+        <img class="fork" src="https://aral.github.com/fork-me-on-github-retina-ribbons/left-white@2x.png" alt="Fork me on GitHub.com" />
+    </a>
+
 </body>
 </html>
