Passing in padding properties

--- a/example/index.html
+++ b/example/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
 
-    <title>Photomask Example</title>
     <meta charset="UTF-8" />
+    <title>Photomask Example</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="css/default.css" />
     <script type="text/javascript" src="js/photomask.js"></script>
-    <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
 
 </head>
 <body>
