Moved from Webpack to Gulp

--- a/example/index.html
+++ b/example/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="css/default.css" />
     <script type="text/javascript" src="vendor/webcomponentsjs/webcomponents-lite.js"></script>
-    <script type="text/javascript" src="js/photomask.js"></script>
+    <script type="text/javascript" src="js/bundle.js"></script>
 
 </head>
 <body>
